complete migration to librelauncherlib